examples/bad/divide_by_zero.c
int main() {
	int a;
	print(1/a);
}